[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/Levels/LevelTemplate/background.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Players/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Levels/LevelTemplate.gd" type="Script" id=3]
[ext_resource path="res://src/Common/Levels/ElectricalBarrier.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Common/UI/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Levels/LevelTemplate/background-brushes-down.png" type="Texture" id=6]
[ext_resource path="res://src/Levels/LevelTemplate/background-trees-up.png" type="Texture" id=7]
[ext_resource path="res://src/Levels/LevelTemplate/sky.png" type="Texture" id=8]
[ext_resource path="res://src/Levels/Camera2D.gd" type="Script" id=9]
[ext_resource path="res://src/Common/Levels/limit_walking_horiz.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/Common/Levels/limit_wakling_vert.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/Common/UI/Controls.tscn" type="PackedScene" id=12]

[sub_resource type="TileSet" id=1]
0/name = "background.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 96, 96 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="LevelTemplate" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_vertical_guides_": [ 385.0 ]
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer7" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.3, 1 )
motion_mirroring = Vector2( 620, 0 )

[node name="sky" type="Sprite" parent="ParallaxBackground/ParallaxLayer7"]
modulate = Color( 0.631373, 0.631373, 0.631373, 1 )
position = Vector2( 81, 61 )
texture = ExtResource( 8 )

[node name="ParallaxLayer8" type="ParallaxLayer" parent="ParallaxBackground"]
modulate = Color( 0.105882, 0.105882, 0.105882, 1 )
motion_scale = Vector2( 0.8, 1 )
motion_offset = Vector2( -15, 0 )
motion_mirroring = Vector2( 620, 0 )

[node name="trees" type="Sprite" parent="ParallaxBackground/ParallaxLayer8"]
modulate = Color( 0.631373, 0.631373, 0.631373, 1 )
position = Vector2( 80, 84 )
texture = ExtResource( 7 )

[node name="ParallaxLayer6" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.9, 1 )
motion_offset = Vector2( -10, 0 )
motion_mirroring = Vector2( 620, 0 )

[node name="trees" type="Sprite" parent="ParallaxBackground/ParallaxLayer6"]
modulate = Color( 0.631373, 0.631373, 0.631373, 1 )
position = Vector2( 78, 84 )
texture = ExtResource( 7 )
flip_h = true

[node name="ParallaxLayer5" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 620, 0 )

[node name="trees" type="Sprite" parent="ParallaxBackground/ParallaxLayer5"]
position = Vector2( 81, 84 )
texture = ExtResource( 7 )

[node name="ParallaxBackground2" type="ParallaxBackground" parent="."]
layer = 100

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground2"]
position = Vector2( 1, 193 )
motion_scale = Vector2( 1.2, 1 )
motion_offset = Vector2( -10, 0 )
motion_mirroring = Vector2( 620, 0 )

[node name="brushes" type="Sprite" parent="ParallaxBackground2/ParallaxLayer3"]
position = Vector2( 77, 0 )
texture = ExtResource( 6 )

[node name="ground" type="TileMap" parent="."]
position = Vector2( 0, 17 )
tile_set = SubResource( 1 )
cell_size = Vector2( 96, 96 )
format = 1
tile_data = PoolIntArray( 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 65556, 0, 0, 65557, 0, 0, 65558, 0, 0, 65559, 0, 0, 65560, 0, 0, 65561, 0, 0, 65562, 0, 0, 65563, 0, 0, 65564, 0, 0, 65565, 0, 0, 65566, 0, 0, 65567, 0, 0, 65568, 0, 0, 65569, 0, 0, 65570, 0, 0, 65571, 0, 0, 196607, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 131093, 0, 0, 131094, 0, 0, 131095, 0, 0, 131096, 0, 0, 131097, 0, 0, 131098, 0, 0, 131099, 0, 0, 131100, 0, 0, 131101, 0, 0, 131102, 0, 0, 131103, 0, 0, 131104, 0, 0, 131105, 0, 0, 131106, 0, 0, 131107, 0, 0 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 0, 105 )

[node name="limit_walking_horiz" parent="Node2D" instance=ExtResource( 10 )]

[node name="limit_walking_horiz2" parent="Node2D" instance=ExtResource( 10 )]
position = Vector2( 0, 107 )

[node name="limit_wakling_vert" parent="Node2D" instance=ExtResource( 11 )]

[node name="CameraLimitRect" type="ReferenceRect" parent="."]
margin_top = 8.0
margin_right = 3415.0
margin_bottom = 201.0

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 90, 156 )

[node name="SpawnPosition2DLeft" type="Position2D" parent="Player"]
position = Vector2( -170, -20 )

[node name="SpawnPosition2DLeft2" type="Position2D" parent="Player"]
position = Vector2( -170, 20 )

[node name="SpawnPosition2DRight" type="Position2D" parent="Player"]
position = Vector2( 170, -20 )

[node name="SpawnPosition2DRight2" type="Position2D" parent="Player"]
position = Vector2( 170, 20 )

[node name="TileMap" type="TileMap" parent="."]
format = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 90, 156 )
smoothing_enabled = true
smoothing_speed = 2.0
script = ExtResource( 9 )

[node name="spawnEnemiesNotifier" type="Node2D" parent="."]

[node name="spawn01" type="VisibilityNotifier2D" parent="spawnEnemiesNotifier"]
position = Vector2( 362, 161 )

[node name="spawn02" type="VisibilityNotifier2D" parent="spawnEnemiesNotifier"]
position = Vector2( 588, 163 )

[node name="spawn03" type="VisibilityNotifier2D" parent="spawnEnemiesNotifier"]
position = Vector2( 1011, 163 )

[node name="Timer" type="Timer" parent="."]

[node name="ElectricalBarriers" type="Node2D" parent="."]
position = Vector2( 824, 163 )

[node name="01" type="Node2D" parent="ElectricalBarriers"]

[node name="ElectricalBarrier" parent="ElectricalBarriers/01" instance=ExtResource( 4 )]
position = Vector2( -418, -45 )

[node name="02" type="Node2D" parent="ElectricalBarriers"]

[node name="ElectricalBarrier" parent="ElectricalBarriers/02" instance=ExtResource( 4 )]
position = Vector2( -49, -45 )

[node name="03" type="Node2D" parent="ElectricalBarriers"]

[node name="ElectricalBarrier" parent="ElectricalBarriers/03" instance=ExtResource( 4 )]
position = Vector2( 401, -45 )

[node name="ElectricalBarrier2" parent="ElectricalBarriers/03" instance=ExtResource( 4 )]
position = Vector2( 431, -45 )
type = 2

[node name="Controls" parent="." instance=ExtResource( 12 )]
layer = 128

[connection signal="screen_entered" from="spawnEnemiesNotifier/spawn01" to="." method="_on_spawn01_screen_entered"]
[connection signal="screen_entered" from="spawnEnemiesNotifier/spawn02" to="." method="_on_spawn02_screen_entered"]
[connection signal="screen_entered" from="spawnEnemiesNotifier/spawn03" to="." method="_on_spawn03_screen_entered"]
